# modern-cam

./: .gitignore  CLAUDE_CONTEXT.md  CLAUDE_PROJECTS_UPLOAD.md  CONTRIBUTING.md  LICENSE  MASTER_PLAN.md  PROJECT_STATUS.md  README.md  index.html  package-lock.json  package.json  valid.dxf
.github/workflows/: build.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FileHandler.jsx  Scene.jsx  Sidebar.jsx  Toolbar.jsx  Toolpath.jsx
src/utils/: geometryUtils.js
