[package]
name = "modern-cam"
version = "0.1.0"
description = "Modern CAM software for macOS"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
